testdata/baselines/reference/submodule/compiler/importsInAmbientModules3.errors.txt
main.ts(2,24): error TS2307: Cannot find module 'external' or its corresponding type declarations.


==== main.ts (1 errors) ====
    declare module "M" {
        import C = require("external");
                           ~~~~~~~~~~
!!! error TS2307: Cannot find module 'external' or its corresponding type declarations.
    }
==== external.d.ts (0 errors) ====
    export default class C {}
    